[package]
name = "event-driven"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "*"
env_logger = "0.9"
log = "0.4"
kafka = "0.8"
rdkafka = "0.26"
rusqlite = { version = "0.26.0", features = ["bundled"] }
serde = "1"
serde_json = "1"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}


[[bin]]
name = "client"
path = "src/bin/client.rs"
