[package]
name = "event-driven"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.9"
log = "0.4"
rdkafka = "0.26"
rusqlite = {version = "0.26.0", features = ["bundled"]}
structopt = "0.3"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}


[[bin]]
name = "client"
path = "src/bin/client.rs"


[[bin]]
name = "worker"
path = "src/bin/worker.rs"
